--- a/wp-content/themes/ultralatch-ecommerce-theme/assets/styles/main.scss
+++ b/wp-content/themes/ultralatch-ecommerce-theme/assets/styles/main.scss
@@ -13,7 +13,7 @@
 @import "components/grid";
 @import "components/wp-classes";
 @import "components/slider-base";
-//@import "components/social-nav";
+@import "components/promo-ad";
 @import "components/jumbotrons";
 @import "components/business-info";
 @import "layouts/header";
