--- a/wp-content/themes/ultralatch-ecommerce-theme/assets/styles/components/_promo-ad.scss
+++ b/wp-content/themes/ultralatch-ecommerce-theme/assets/styles/components/_promo-ad.scss
@@ -4,7 +4,7 @@ $adBkg: #f29700;
 $brand-primary: #cd3327;
 $adText: #231f20;
 
-// AD-SPOT DESIGN
+//.ul-ad-SPOT DESIGN
 
 .glow {
   -webkit-animation: glow 1s ease-in-out infinite alternate;
@@ -27,11 +27,12 @@ $glow2: #ffc107; // brighter orange
     0 0 60px $glow2;
   }
 }
-.ad-wrapper {
+.ul-ad-wrapper {
   max-width: 1110px;
   margin: 0 auto;
+  display: block !important;
 }
-.ad-spot {
+.ul-ad-spot {
   display: flex !important;
   align-items: center;
   justify-content: center;
@@ -41,7 +42,7 @@ $glow2: #ffc107; // brighter orange
   overflow: hidden;
   position: relative;
 
-  .ad-door {
+  .ul-ad-door {
     width: 450px;
     height: 100%;
     position: absolute;
@@ -53,7 +54,7 @@ $glow2: #ffc107; // brighter orange
     background-position-y: center;
     z-index: 5;
   }
-  .ad-handle {
+  .ul-ad-handle {
     background-size: 70%;
    background: transparent url("../images/handleCircleShort.png") no-repeat bottom right;
     position: absolute;
@@ -65,9 +66,9 @@ $glow2: #ffc107; // brighter orange
     z-index: 20;
   }
 
-  // AD-BLOCK TEXT
+  //.ul-ad-BLOCK TEXT
 
-  .ad-pitch {
+  .ul-ad-pitch {
     color: $adText;
     height: auto;
     display: grid;
@@ -117,15 +118,15 @@ $glow2: #ffc107; // brighter orange
   }
 }
 @media all and (max-width: 744px) {
-  .ad-spot {
-    .ad-handle {
+  .ul-ad-spot {
+    .ul-ad-handle {
       background-size: 71%;
     }
   }
 }
 @media all and (max-width: 667px) {
-  .ad-spot {
-    .ad-pitch {
+  .ul-ad-spot {
+    .ul-ad-pitch {
       color: white;
       grid-template-columns: 20px 1fr;
       grid-template-areas:
@@ -138,7 +139,7 @@ $glow2: #ffc107; // brighter orange
         text-shadow: none;
       }
     }
-    .ad-door {
+    .ul-ad-door {
       background-position-x: 0;
       background-position-y: 0;
       background-image: linear-gradient(
@@ -154,16 +155,16 @@ $glow2: #ffc107; // brighter orange
 }
 
 @media all and (max-width: 568px) {
-  .ad-spot {
-    .ad-handle {
+  .ul-ad-spot {
+    .ul-ad-handle {
       background-size: 60%;
     }
   }
 }
 
 @media (max-width: 414px) {
-  .ad-spot {
-    .ad-door {
+  .ul-ad-spot {
+    .ul-ad-door {
       background-image: linear-gradient(
           350deg,
           $adBkg,
@@ -178,8 +179,8 @@ $glow2: #ffc107; // brighter orange
 }
 
 @media all and (max-width: 280px) {
-  .ad-spot {
-    .ad-pitch {
+  .ul-ad-spot {
+    .ul-ad-pitch {
       color: white;
       grid-template-columns: 1fr;
       grid-template-areas:
