--- a/wp-content/themes/ultralatch-ecommerce-theme/assets/styles/main.scss
+++ b/wp-content/themes/ultralatch-ecommerce-theme/assets/styles/main.scss
@@ -1,18 +1,11 @@
 
-//@import "~typeface-montserrat/index.css";
-//@import "~font-awesome-webpack-4";
-@import "~bootstrap-scss/bootstrap";
-@import "~bootstrap-scss/mixins";
-//@import "bundles/bootstrap.min.css";
-//@import "bundles/bootstrap-grid.min.css";
-//@import "bundles/slick";
-
+@import "~bootstrap/scss/bootstrap";
 @import "common/variables";
 @import "common/global";
 @import "components/buttons";
 @import "components/comments";
 @import "components/forms";
-//@import "components/forms-base";
+@import "components/forms-base";
 @import "components/grid";
 @import "components/wp-classes";
 @import "components/slider-base";
